Add player tracker.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="container">    
+        <h2>The current player is: Player <span id="current-player">1</span></h2>
         <div id="game-board"></div>
     </div>
 </body>
