--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
     <div id="container">    
         <h2>The current player is: Player <span id="current-player">1</span></h2>
-        <div id="game-board"></div>
+        <div id="game-board">
+                <div class="playing-space" id="playingSpace1"></div>
+                <div class="playing-space" id="playingSpace2"></div>
+                <div class="playing-space" id="playingSpace3"></div>
+                <div class="playing-space" id="playingSpace4"></div>
+                <div class="playing-space" id="playingSpace5"></div>
+                <div class="playing-space" id="playingSpace6"></div>
+                <div class="playing-space" id="playingSpace7"></div>
+                <div class="playing-space" id="playingSpace8"></div>
+                <div class="playing-space" id="playingSpace9"></div>
+        </div>
     </div>
 </body>
 </html>
