--- a/index.html
+++ b/index.html
@@ -8,18 +8,26 @@
     <script src="index.js" defer></script>
 </head>
 <body>
+    <div class="sidebar">
+        <button id="new-game">New Game</button>
+        <form>
+            input player1 name
+            input player2 name 
+            submit names - display names somewhere on screen
+        </form>
+    </div>
     <div id="container">    
         <h2>The current player is: Player <span id="current-player">1</span></h2>
         <div id="game-board">
-                <div class="playing-space" id="playingSpace1"></div>
-                <div class="playing-space" id="playingSpace2"></div>
-                <div class="playing-space" id="playingSpace3"></div>
-                <div class="playing-space" id="playingSpace4"></div>
-                <div class="playing-space" id="playingSpace5"></div>
-                <div class="playing-space" id="playingSpace6"></div>
-                <div class="playing-space" id="playingSpace7"></div>
-                <div class="playing-space" id="playingSpace8"></div>
-                <div class="playing-space" id="playingSpace9"></div>
+                <div class="playing-space" id="playing-space1"></div>
+                <div class="playing-space" id="playing-space2"></div>
+                <div class="playing-space" id="playing-space3"></div>
+                <div class="playing-space" id="playing-space4"></div>
+                <div class="playing-space" id="playing-space5"></div>
+                <div class="playing-space" id="playing-space6"></div>
+                <div class="playing-space" id="playing-space7"></div>
+                <div class="playing-space" id="playing-space8"></div>
+                <div class="playing-space" id="playing-space9"></div>
         </div>
     </div>
 </body>
